Fixed visual alignment in Home Page and Updated my info in About page and added <position> in array to describe role

--- a/src/Stylesheets/Home.module.css
+++ b/src/Stylesheets/Home.module.css
@@ -37,6 +37,7 @@
     padding: 2rem 2rem 1rem 2rem;
     font-size: 50px;
     display: flex;
+    font-weight: 600;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -59,20 +60,35 @@
 
     color:white;
     width: 50vw;
+    font-weight: 600;
     margin: 0.5rem 1rem 1rem 1rem;
     padding: 0.5rem 1rem 1rem 1rem;
     font-size: 20px;
     margin-left: 3rem;
 }
 .LearnBtn {
-    margin: 1rem;
-    padding: 5px;
-    margin-left: 5rem;
+    
+    margin-left: 3.5rem;
     width: 25vh;
     height: 7vh;
     background-color:rgb(7, 54, 129) ;
     margin-top: 0px;
     padding-top: 0px;
+    
+    display: inline-block;
+    background-color: #0ea5e9;
+    padding: 0.75rem 1.25rem;
+    border-radius: 0.5rem;
+    color: #f8fafc;
+    text-align: center;
+    font-weight: 600;
+    text-decoration: none;
+    transition: background-color 0.3s ease-in-out;
+    
+    &:hover {
+      background-color: #aa00ff;
+      color:white;
+    }
 }
 .LearnBtn:hover {
     box-shadow: 2px 2px 10px rgb(109, 159, 240);
